NOCC 0.9.6	??

	* Gets signature/leadin string from a base64-encoded preference.
	* Added code to convert signature file to signature preference, if
	  found.
	* Added reply leadin code (Colin Stephenson).
	* Added a 'timestamp' member to the content array in aff_mail.
	* Fixed message header display bug.
	* Remove date display from INBOX.
	* Updated Portugese translation (Jose Carlos)


NOCC 0.9.5	November   25, 2001

	* Fixed handling prefs file in prefs.php.
	* Fixed calls to cachePrefValue() in prefs.php.
	* Preferences optional, by omitting to set the prefs_dir in conf.php.
	* Stopped including attachments in replies.
	* Changed all imap_open to @imap_open to suppress warnings (#477574)
	* Ensure that magic_quotes_runtime is off to prevent attachment
	  mangling.
	* Add htmlspecialchars to pre-filled fields in send.php
	* Added safestrip, which works based on php.ini magic_quotes_gpc.
	* Move previous strip slashes to before sending mail
	* Strip slashes from body on reply.
	* Prevented preferences from creating prefs/sig until user is
	  properly logged in.
	* Added error handling for prefs/sig file writing errors.
	* Fixed cut_addresses to handle addresses with quoted commas.
	* Fixed various XHTML incompliances.
	* Added optional 'base_uri' configuration parameter (#463390)
	* Added patch from Arno Bean to make checkbox labels clickable
	  in prefs.
	* Added tooltip for full e-mail address in message list.
	* Moved 'select all' and 'delete' buttons, top and bottom.
	* Added a 'send confirmed' page so user is sure mail was accepted.
	* Present an error when sendaction has not been set (e.g javascript
	  disabled).
	* Replaced error_log calls with a sessionlog member in class_smtp.php
	* Replaced PEAR::Error with simple Exception class.
	* Strip slashes from user while logging in (#465418).
	* Bypassed redundant 'check_form' javascript method.
	* Added 'outlook-style quoting' preference (#459461)
	* Added config option to present delete icon as a button.